@@ -4,8 +4,11 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
   * Change the Debian designation for the ARM architecture from arm to armel.
     The internal 'arch-spec' and file naming convention remains "arm" in order
     to avoid unnecessary changes and work for translators.
+  * Mention that TERM= can be passed as boot parameter to set the terminal type
+    for serial console installs. Based on a patch suggested by Samuel Thibault.
+    Closes: #524666.
 
- -- Frans Pop <fjp@debian.org>  Mon, 27 Apr 2009 23:49:42 +0200
+ -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
 
 installation-guide (20090427) unstable; urgency=low
 
